Added linux support

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,5 +1,6 @@
 [Window][Debug##Default]
-Pos=60,60
+ViewportPos=215,461
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
@@ -15,7 +16,8 @@ Size=550,680
 Collapsed=0
 
 [Window][Settings]
-Pos=974,649
+ViewportPos=1460,640
+ViewportId=0x1C33C293
 Size=297,57
 Collapsed=0
 
